// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-less > should add less-loader 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.less\\$/,
    "use": [
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "builtin:lightningcss-loader",
        "options": {
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-less/compiled/less-loader/index.js",
        "options": {
          "implementation": "<ROOT>/packages/plugin-less/compiled/less/index.js",
          "lessOptions": {
            "javascriptEnabled": true,
            "paths": [
              "<ROOT>/node_modules",
            ],
          },
          "sourceMap": false,
        },
      },
    ],
  },
]
`;

exports[`plugin-less > should add less-loader and css-loader when injectStyles 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.less\\$/,
    "use": [
      {
        "loader": "<ROOT>/packages/core/compiled/style-loader",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "builtin:lightningcss-loader",
        "options": {
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-less/compiled/less-loader/index.js",
        "options": {
          "implementation": "<ROOT>/packages/plugin-less/compiled/less/index.js",
          "lessOptions": {
            "javascriptEnabled": true,
            "paths": [
              "<ROOT>/node_modules",
            ],
          },
          "sourceMap": false,
        },
      },
    ],
  },
]
`;

exports[`plugin-less > should add less-loader with excludes 1`] = `
[
  {
    "exclude": [
      /node_modules/,
    ],
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.less\\$/,
    "use": [
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "builtin:lightningcss-loader",
        "options": {
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-less/compiled/less-loader/index.js",
        "options": {
          "implementation": "<ROOT>/packages/plugin-less/compiled/less/index.js",
          "lessOptions": {
            "javascriptEnabled": true,
            "paths": [
              "<ROOT>/node_modules",
            ],
          },
          "sourceMap": false,
        },
      },
    ],
  },
]
`;

exports[`plugin-less > should add less-loader with tools.less 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.less\\$/,
    "use": [
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "builtin:lightningcss-loader",
        "options": {
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-less/compiled/less-loader/index.js",
        "options": {
          "implementation": "<ROOT>/packages/plugin-less/compiled/less/index.js",
          "lessOptions": {
            "javascriptEnabled": false,
            "paths": [
              "<ROOT>/node_modules",
            ],
          },
          "sourceMap": false,
        },
      },
    ],
  },
]
`;
